--- a/simplifile/appsettings.json
+++ b/simplifile/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=LAPTOP-0BKEVO3B\\SQLEXPRESS;Database=SimpliFac;User Id=sa;Password=123456.a;MultipleActiveResultSets=true"
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=SimpliFac;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-0BKEVO3B\\SQLEXPRESS;Database=SimpliFac;User Id=sa;Password=123456.a;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=SimpliFac;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "install": "0",
   "Logging": {
